Sources/DLL/Interface/FacadeInterfaceNative.h

	__declspec(dllexport) void animer(double temps);
	__declspec(dllexport) int  obtenirAffichagesParSeconde();
	__declspec(dllexport) int obtenirNombreDeBilles();
	__declspec(dllexport) int obtenirModeDoubleBille();
	__declspec(dllexport) int obtenirAffichageGlobal();
	__declspec(dllexport) void bloquerAffichageGlobal(int active);
	__declspec(dllexport) void supprimerBille();
	__declspec(dllexport) bool spotLight(int lum, bool state);
	__declspec(dllexport) void initialiserSingleton();
	__declspec(dllexport) void detruireSingleton();
	__declspec(dllexport) int obtenirPointsGagnerBille();
	__declspec(dllexport) int obtenirPointsGagnerPartie();
	__declspec(dllexport) int obtenirNombreDePointsDePartie();
	__declspec(dllexport) void resetNombreDePointsDePartie();
	__declspec(dllexport) int  obtenirNombreBillesCourante();
	__declspec(dllexport) void resetNombreBillesCourantes();
	__declspec(dllexport) void activerPalettesDJ1();
	__declspec(dllexport) void desactiverPalettesDJ1();
	__declspec(dllexport) void activerPalettesGJ2();
	__declspec(dllexport) void desactiverPalettesGJ2();
	__declspec(dllexport) void activerPalettesDJ2();
	__declspec(dllexport) void desactiverPalettesDJ2();
	__declspec(dllexport) void animerJeu(bool animer);
	__declspec(dllexport) void rechargerArbre(bool recharger);
	__declspec(dllexport) void activerAI(bool actif);
	__declspec(dllexport) void activerCustomConsole();
	__declspec(dllexport) BSTR obtenirCout();
	__declspec(dllexport) void creeSon(char* value, int length);
	__declspec(dllexport) void jouerSon(char* value, int length, bool pause = false);
	__declspec(dllexport) void bouclerSon(char* value, int length, bool loop = true);
	__declspec(dllexport) void sourdine(bool mute = true);
	__declspec(dllexport) void arreterSon(char* value, int length);
	__declspec(dllexport) void ajusterBGM(float pourcentage);
	__declspec(dllexport) void ajusterSFX(float pourcentage);
	__declspec(dllexport) void utiliserCameraOrbite(bool utiliseOrbite);
	__declspec(dllexport) void sauvegarderHistorique();
	__declspec(dllexport) void annulerModifications();
	__declspec(dllexport) void retablirModifications();
	__declspec(dllexport) void creeTexte(char* text, int lengthT, char* font, int lengthF);
	__declspec(dllexport) void updateText(char* oldText, int lengthO, char* newText, int lengthN);
	__declspec(dllexport) void resize(char* text, int length, int size);
	__declspec(dllexport) void changerCouleur(char* text, int length, float rouge, float vert, float bleu);
	__declspec(dllexport) void changerCouleurV(char* text, int length, float couleur[3]);
	__declspec(dllexport) void repositionner(char* text, int length, float x, float y);
	__declspec(dllexport) void suprimerText(char* text, int length);
	__declspec(dllexport) void afficherTextes(bool afficher = true);